# aur

./: README.md
caffe/: PKGBUILD  readmeFix!!!.patch
glad/: PKGBUILD
glad/src/glad/: gladConfig.cmake
opengv-git/: system-pybind.patch
unamea/: unamea.sh
unamea/releases/: unamea-1.0.0.tar.xz
zipios/: PKGBUILD  README.md
zipios/find/: CMakeLists.txt
zipios/src/zipios/: CMakeLists.txt
zipios/src/zipios/src/: CMakeLists.txt
